WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238481
[GLIB] Ubuntu LTS build broken after
r291956
https://bugs.webkit.org/show_bug.cgi?id=238481
Summary
[GLIB] Ubuntu LTS build broken after r291956
Diego Pino
Reported
2022-03-28 19:29:09 PDT
[GLIB] Ubuntu LTS build broken after
r291956
Attachments
Patch
(2.12 KB, patch)
2022-03-28 19:40 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Patch
(2.10 KB, patch)
2022-03-28 22:55 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
[fast-cq] Patch
(2.13 KB, patch)
2022-03-29 17:33 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-03-28 19:40:47 PDT
Created
attachment 455982
[details]
Patch
Diego Pino
Comment 2
2022-03-28 19:43:42 PDT
Ubuntu LTS build bot error: ``` ../../Source/WebCore/rendering/style/StyleGridData.h:47:59: error: ‘bool WebCore::GridTrackEntrySubgrid::operator==(const WebCore::GridTrackEntrySubgrid&) const’ cannot be defaulted 47 | bool operator==(const GridTrackEntrySubgrid&) const = default; | ^~~~~~~ ../../Source/WebCore/rendering/style/StyleGridData.h:50:58: error: ‘bool WebCore::GridTrackEntryRepeat::operator==(const WebCore::GridTrackEntryRepeat&) const’ cannot be defaulted 50 | bool operator==(const GridTrackEntryRepeat&) const = default; | ^~~~~~~ ../../Source/WebCore/rendering/style/StyleGridData.h:56:62: error: ‘bool WebCore::GridTrackEntryAutoRepeat::operator==(const WebCore::GridTrackEntryAutoRepeat&) const’ cannot be defaulted 56 | bool operator==(const GridTrackEntryAutoRepeat&) const = default; | ^~~~~~~ ```
https://build.webkit.org/#/builders/68/builds/12315/steps/8/logs/stdio
Diego Pino
Comment 3
2022-03-28 22:55:27 PDT
Created
attachment 455998
[details]
Patch
Darin Adler
Comment 4
2022-03-29 15:34:13 PDT
Comment on
attachment 455998
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=455998&action=review
> Source/WebCore/ChangeLog:3 > + [GLIB] Ubuntu LTS build broken after
r291956
There should not be a "[GLIB]" prefix on a bug like this. I know our rule might be confusing. A "you used a non-portable feature that GCC doesn’t support yet" bug doesn’t need a platform prefix. Or if it did have one, it would be "[GCC]".
EWS
Comment 5
2022-03-29 17:22:03 PDT
/Volumes/Data/worker/Commit-Queue/build/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Diego Pino
Comment 6
2022-03-29 17:33:43 PDT
Created
attachment 456082
[details]
[fast-cq] Patch
EWS
Comment 7
2022-03-29 18:58:14 PDT
Committed
r292094
(
249014@main
): <
https://commits.webkit.org/249014@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456082
[details]
.
Radar WebKit Bug Importer
Comment 8
2022-03-29 18:59:17 PDT
<
rdar://problem/91018313
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug