[GCC] Ubuntu LTS build broken after r291956 https://bugs.webkit.org/show_bug.cgi?id=238481

Reviewed by Darin Adler.

Default comparisons by value (P1946R0) is only supported since GCC10.
https://en.cppreference.com/w/cpp/compiler_support/20

* rendering/style/StyleGridData.h:
(WebCore::GridTrackEntrySubgrid::operator== const):
(WebCore::GridTrackEntryRepeat::operator== const):
(WebCore::GridTrackEntryAutoRepeat::operator== const):



Canonical link: https://commits.webkit.org/249014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292094 268f45cc-cd09-0410-ab3c-d52691b4dbfc